--- a/EKC_with_policy_changes.ipynb
+++ b/EKC_with_policy_changes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "id": "31ee1870",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "05197e5c",
    "metadata": {},
    "outputs": [
@@ -267,14 +267,13 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rural_population_share = 64\n",
-    "urban_population_share = 36\n",
+    "\n",
     "\n",
     "df = pd.read_csv(\"energy-consumption-by-source-india/energy-consumption-by-source-and-country.csv\")\n",
     "\n",
@@ -283,100 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "515c8b05",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Entity</th>\n",
-       "      <th>Code</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Primary energy consumption per GDP (kWh/$)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>India</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>1.200466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>India</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>1981</td>\n",
-       "      <td>1.252301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>India</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>1982</td>\n",
-       "      <td>1.201958</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>India</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>1983</td>\n",
-       "      <td>1.168588</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>India</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>1984</td>\n",
-       "      <td>1.201783</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Entity Code  Year  Primary energy consumption per GDP (kWh/$)\n",
-       "0  India  IND  1980                                    1.200466\n",
-       "1  India  IND  1981                                    1.252301\n",
-       "2  India  IND  1982                                    1.201958\n",
-       "3  India  IND  1983                                    1.168588\n",
-       "4  India  IND  1984                                    1.201783"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2 = pd.read_csv('energy-intensity-india/energy-intensity.csv')\n",
-    "\n",
-    "df2.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "id": "fe163276",
    "metadata": {},
    "outputs": [
@@ -444,7 +350,7 @@
        "4  1964.0  117.856431"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 84,
    "id": "8beaf8b7",
    "metadata": {},
    "outputs": [
@@ -555,7 +461,7 @@
        "4  1984      0.892467"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 85,
    "id": "70c215af",
    "metadata": {},
    "outputs": [],
@@ -616,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
    "id": "f074764e",
    "metadata": {},
    "outputs": [],
@@ -630,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 87,
    "id": "18a2682d",
    "metadata": {},
    "outputs": [
@@ -671,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "513d1724",
    "metadata": {},
    "outputs": [
@@ -695,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 89,
    "id": "7ad12a01",
    "metadata": {},
    "outputs": [
@@ -708,8 +614,8 @@
       "Dep. Variable:              ln_CO2_pc   No. Observations:                   45\n",
       "Model:                  ARDL(1, 0, 0)   Log Likelihood                  97.258\n",
       "Method:               Conditional MLE   S.D. of innovations              0.027\n",
-      "Date:                Thu, 29 Jan 2026   AIC                           -184.516\n",
-      "Time:                        22:19:46   BIC                           -175.595\n",
+      "Date:                Fri, 30 Jan 2026   AIC                           -184.516\n",
+      "Time:                        00:20:48   BIC                           -175.595\n",
       "Sample:                             1   HQIC                          -181.208\n",
       "                                   45                                         \n",
       "===================================================================================\n",
@@ -742,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "id": "8d8babfe",
    "metadata": {},
    "outputs": [
@@ -755,8 +661,8 @@
       "Dep. Variable:            D.ln_CO2_pc   No. Observations:                   45\n",
       "Model:                  UECM(1, 1, 1)   Log Likelihood                  98.783\n",
       "Method:               Conditional MLE   S.D. of innovations              0.474\n",
-      "Date:                Thu, 29 Jan 2026   AIC                           -183.567\n",
-      "Time:                        22:54:54   BIC                           -171.077\n",
+      "Date:                Fri, 30 Jan 2026   AIC                           -183.567\n",
+      "Time:                        00:20:48   BIC                           -171.077\n",
       "Sample:                             1   HQIC                          -178.935\n",
       "                                   45                                         \n",
       "=====================================================================================\n",
@@ -793,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 91,
    "id": "1b0bfcc8",
    "metadata": {},
    "outputs": [
@@ -817,11 +723,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "5723453b",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity</th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Renewables (% equivalent primary energy)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>India</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>8.642867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>India</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>1966</td>\n",
+       "      <td>8.758059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>India</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>9.506948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>India</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>10.267060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>India</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>10.283279</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Entity Code  Year  Renewables (% equivalent primary energy)\n",
+       "0  India  IND  1965                                  8.642867\n",
+       "1  India  IND  1966                                  8.758059\n",
+       "2  India  IND  1967                                  9.506948\n",
+       "3  India  IND  1968                                 10.267060\n",
+       "4  India  IND  1969                                 10.283279"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# considering renewables:\n",
+    "\n",
+    "df5 = pd.read_csv(\"share-of-primary-energy-consumption-from-renewable-sources.filtered/share-of-primary-energy-consumption-from-renewable-sources.csv\")\n",
+    "\n",
+    "df5.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "dd58c9d4",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# merge data \n",
+    "\n",
+    "df5 = df5[df5['Entity'] == 'India'][['Year', 'Renewables (% equivalent primary energy)']]\n",
+    "df5.rename(columns={'Renewables (% equivalent primary energy)': 'renew_share'}, inplace=True)\n",
+    "\n",
+    "ekc_df = ekc_df.merge(df5, on='Year', how='inner')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "0b972f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ln_CO2_pc 0.8570266492130741\n",
+      "ln_GDP_pc 0.9941163211899597\n",
+      "renew_share 0.014474756082121272\n"
+     ]
+    }
+   ],
+   "source": [
+    "ekc_df['renew_share'] = ekc_df['renew_share'] / 100\n",
+    "\n",
+    "\n",
+    "# stationarity check:\n",
+    "\n",
+    "for col in ['ln_CO2_pc', 'ln_GDP_pc', 'renew_share']:\n",
+    "    print(col, adfuller(ekc_df[col])[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "0a470729",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              ARDL Model Results                              \n",
+      "==============================================================================\n",
+      "Dep. Variable:              ln_CO2_pc   No. Observations:                   45\n",
+      "Model:                     ARDL(1, 1)   Log Likelihood                  97.064\n",
+      "Method:               Conditional MLE   S.D. of innovations              0.027\n",
+      "Date:                Fri, 30 Jan 2026   AIC                           -184.129\n",
+      "Time:                        00:20:48   BIC                           -175.208\n",
+      "Sample:                             1   HQIC                          -180.821\n",
+      "                                   45                                         \n",
+      "================================================================================\n",
+      "                   coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------\n",
+      "const           -0.2293      0.132     -1.738      0.090      -0.496       0.037\n",
+      "ln_CO2_pc.L1     0.9283      0.032     28.679      0.000       0.863       0.994\n",
+      "ln_GDP_pc.L0     0.1520      0.057      2.651      0.011       0.036       0.268\n",
+      "ln_GDP_pc.L1    -0.1125      0.058     -1.926      0.061      -0.230       0.006\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new ARDL specs\n",
+    "\n",
+    "y = ekc_df['ln_CO2_pc']\n",
+    "X = ekc_df[['ln_GDP_pc', 'renew_share']]\n",
+    "\n",
+    "sel = ardl_select_order(\n",
+    "    endog=y,\n",
+    "    exog=X,\n",
+    "    maxlag=2,\n",
+    "    maxorder=2,\n",
+    "    ic='aic',\n",
+    "    trend='c'\n",
+    ")\n",
+    "\n",
+    "ardl_model = sel.model.fit()\n",
+    "print(ardl_model.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "ee15a13e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              UECM Model Results                              \n",
+      "==============================================================================\n",
+      "Dep. Variable:            D.ln_CO2_pc   No. Observations:                   45\n",
+      "Model:                  UECM(1, 1, 1)   Log Likelihood                  98.034\n",
+      "Method:               Conditional MLE   S.D. of innovations              0.474\n",
+      "Date:                Fri, 30 Jan 2026   AIC                           -182.068\n",
+      "Time:                        00:20:48   BIC                           -169.579\n",
+      "Sample:                             1   HQIC                          -177.436\n",
+      "                                   45                                         \n",
+      "====================================================================================\n",
+      "                       coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------------\n",
+      "const               -0.2912      0.161     -1.804      0.079      -0.618       0.036\n",
+      "ln_CO2_pc.L1        -0.0921      0.048     -1.926      0.062      -0.189       0.005\n",
+      "ln_GDP_pc.L1         0.0529      0.028      1.899      0.065      -0.003       0.109\n",
+      "renew_share.L1      -0.3397      0.438     -0.775      0.443      -1.227       0.547\n",
+      "D.ln_GDP_pc.L0       0.1396      0.058      2.390      0.022       0.021       0.258\n",
+      "D.renew_share.L0    -0.9485      0.741     -1.280      0.208      -2.449       0.552\n",
+      "====================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "uecm = UECM(\n",
+    "    endog=y,\n",
+    "    exog=X,\n",
+    "    lags=1,        # lag of ln_CO2_pc\n",
+    "    order=1,       # lag of exogenous variables\n",
+    "    trend='c'\n",
+    ")\n",
+    "\n",
+    "uecm_res = uecm.fit()\n",
+    "print(uecm_res.summary())\n"
+   ]
   }
  ],
  "metadata": {
